# School-of-Solana

./: .gitignore  README.md  docker-container.sh  prompt.txt
.corepack/v1/yarn/4.10.3/: .corepack
frontend/: package.json
frontend/src/app/: page.tsx
program-Tarat0r/: .gitignore  PROJECT_DESCRIPTION.md  README.md
program-Tarat0r/anchor_project/d21_voting/: Anchor.toml  Cargo.toml  package-lock.json  package.json  tsconfig.json
program-Tarat0r/anchor_project/d21_voting/programs/d21_voting/: Cargo.toml
program-Tarat0r/anchor_project/d21_voting/programs/d21_voting/src/: errors.rs  lib.rs  states.rs
program-Tarat0r/anchor_project/d21_voting/programs/d21_voting/src/instructions/: add_option.rs  cast_vote.rs  initialize_poll.rs  mod.rs
program-Tarat0r/anchor_project/d21_voting/tests/: add_option.spec.ts  cast_vote.spec.ts  edge_cases.spec.ts  initialize_poll.spec.ts
program-Tarat0r/frontend/: package-lock.json  package.json
program-Tarat0r/frontend/src/app/: globals.css
program-Tarat0r/frontend/src/app/lib/: anchor.ts  errors.ts
program-Tarat0r/frontend/src/idl/: d21_voting.json
programs/on-chain-vault/src/instructions/: deposit.rs  initialize.rs  toggle_lock.rs  withdraw.rs
programs/twitter/src/instructions/: add_comment.rs  add_reaction.rs  remove_comment.rs  remove_reaction.rs
src/: shapes.rs
task2-Tarat0r/src/: calculator.rs
task3-Tarat0r/.corepack/: lastKnownGood.json
task3-Tarat0r/programs/on-chain-vault/src/instructions/: withdraw.rs
task4-Tarat0r/programs/twitter/src/instructions/: initialize_tweet.rs
(+2 files in other folders)
