[workspace]
members = [
    "programs/*"
]
resolver = "2"

# [profile.release]
# overflow-checks = true
# lto = "fat"
# codegen-units = 1

[profile.release]
opt-level = "z"        # or "z" if still failing
lto = "thin"           # avoid "fat"
codegen-units = 1
overflow-checks = true
panic = "abort"
debug = false

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
